// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crée une nouvelle partie 1`] = `
Object {
  "type": "NOUVELLE_PARTIE",
}
`;

exports[`démarre la partie 1`] = `
Object {
  "type": "DEMARRER_PARTIE",
}
`;

exports[`inscrit un joueur 1`] = `
Object {
  "joueur": "J1",
  "type": "INSCRIRE_JOUEUR",
}
`;

exports[`lance une fléchette 1`] = `
Object {
  "chiffre": 20,
  "joueur": "J1",
  "touches": 1,
  "type": "LANCER_FLECHETTE",
}
`;
